--- a/Dockerfile.ros.foxy
+++ b/Dockerfile.ros.foxy
@@ -172,6 +172,7 @@ RUN mkdir -p ${ROS_ROOT}/src && \
 		std-srvs \
 		diagnostic-msgs \
 		diagnostic-updater \
+		diagnostics \
 		> ros2.${ROS_DISTRO}.${ROS_PKG}.rosinstall && \
     cat ros2.${ROS_DISTRO}.${ROS_PKG}.rosinstall && \
     vcs import src < ros2.${ROS_DISTRO}.${ROS_PKG}.rosinstall && \
