--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -5,7 +5,7 @@ version: '3'
 tasks:
   build:
     cmds:
-      - docker build . -f Dockerfile.ros.foxy -t codustry/ros:foxy-ros-base-l4t-r32.5.0
+      - docker build . -f Dockerfile.ros.foxy -t circleoncircles/ros:foxy-ros-base-l4t-r32.5.0
   push:
     cmds:
-      - docker push codustry/ros:foxy-ros-base-l4t-r32.5.0
+      - docker push circleoncircles/ros:foxy-ros-base-l4t-r32.5.0
